2000-11-06  Larry Ewing  <lewing@helixcode.com>

	* htmlclueflow.c (save_plain): disable broken condition checks.

2000-11-04  Larry Ewing  <lewing@helixcode.com>

	* htmltext.c (save_plain): remove call to encode_text_to_8bit
	because this actually breaks the mailer which now assumes it is
	getting text/plain in utf-8 not an 8bit character set.  Also stop
	stipping the nbsp here since we can use it in the wrapping code in
	the clueflow. 

	* htmlclueflow.c (save_plain): test for nbsp properly here, and
	convert use append_nonbsp to spaces.
	(string_append_nonbsp): convert utf-8 nbsp sequence to spaces so
	that we put make things less difficult for other mailers.

	* htmlengine.c (parse_i): parse the alt attribute when parsing the
	img element.

	* htmlimage.c (copy): copy alt contents.
	(html_image_set_alt): set the contents of the alt member.
	(html_image_init): initialize alt to NULL;
	
	* htmlimage.h: add html_image_set_alt.

2000-11-04  Radek Doulik  <rodo@helixcode.com>

	* htmlimage.c (html_image_resolve_image_url): rename from
	resolve_image_url, make it public

	* htmlengine-save.c (get_body): use html_image_resolve_image_url

2000-11-03  Radek Doulik  <rodo@helixcode.com>

	* htmlimage.c (resolve_image_url): new function, resolves image
	URL using GTK_HTML_EDITOR_EVENT_IMAGE_URL
	(save): use resolve_image_url

2000-11-02  Radek Doulik  <rodo@helixcode.com>

	* gtkhtml.h (struct _GtkHTMLEditorAPI): add return value for event
	(_GtkHTMLEditorEventType): added IMAGE_URL editor event

2000-11-03  Dan Winship  <danw@helixcode.com>

	* htmlobject.c (destroy): Free self->object_data before freeing
	self.

2000-11-03  Larry Ewing  <lewing@helixcode.com>

	* htmliframe.c (html_iframe_init): remove out of date comment.
	(iframe_size_changed): correct type of the first arg in the
	function prototype.

	* htmlobject.c (copy): init the datalist before we start copying
	the items into it.  This was cause lots of segfaults in the
	editor.
